wrap tab lists to prevent overflow
Quick fix to make sure all tabs are always visisble.

Long-term fix would be to detect overflow and switch to a dropdown in
that case. Or use dropdown for smaller screens only and let it wrap on
larger screens (since it will be rarer for wrapping to trigger there).

--- a/apps/docs/styles/main.scss
+++ b/apps/docs/styles/main.scss
@@ -250,18 +250,8 @@ article p code {
 }
 
 // prevent horizontal scroll on mobile for tablist tab headers
-div[role='tablist'] {
-  @media screen and (min-width: 320px) {
-    max-width: 320px;
-  }
-
-  @media screen and (min-width: 600px) {
-    max-width: 520px;
-  }
-
-  @media screen and (min-width: 769px) {
-    max-width: 620px;
-  }
+.prose div[role='tablist'] {
+  flex-wrap: wrap;
 }
 
 /*
